--- a/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/Marketplace.html
+++ b/CodeStudioAutomation-master/CodeStudioAutomation-master/Automation/Marketplace.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 2, 2026 08:27:50 pm</span></a>
+<a href="#"><span class="badge badge-primary">Jan 3, 2026 12:59:46 am</span></a>
 </li>
 </ul>
 </div>
@@ -88,7 +88,7 @@
           <div class="test-detail">
             <p class="name">marketPlace</p>
             <p class="text-sm">
-              <span>8:27:52 pm</span> / <span>00:00:10:060</span>
+              <span>12:59:47 am</span> / <span>00:00:10:703</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -97,9 +97,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">marketPlace</h5>
-<span class='badge badge-success'>01.02.2026 8:27:52 pm</span>
-<span class='badge badge-danger'>01.02.2026 8:28:02 pm</span>
-<span class='badge badge-default'>00:00:10:060</span>
+<span class='badge badge-success'>01.03.2026 12:59:47 am</span>
+<span class='badge badge-danger'>01.03.2026 12:59:58 am</span>
+<span class='badge badge-default'>00:00:10:703</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -111,14 +111,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:28:02 pm</td>
+        <td>12:59:58 am</td>
         <td>
           Test case passed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:28:02 pm</td>
+        <td>12:59:58 am</td>
         <td>
           
         </td>
@@ -135,7 +135,7 @@
           <div class="test-detail">
             <p class="name">webTableValidation</p>
             <p class="text-sm">
-              <span>8:28:03 pm</span> / <span>00:00:08:269</span>
+              <span>12:59:59 am</span> / <span>00:00:06:497</span>
               <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
@@ -144,9 +144,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-skip">webTableValidation</h5>
-<span class='badge badge-success'>01.02.2026 8:28:03 pm</span>
-<span class='badge badge-danger'>01.02.2026 8:28:11 pm</span>
-<span class='badge badge-default'>00:00:08:269</span>
+<span class='badge badge-success'>01.03.2026 12:59:59 am</span>
+<span class='badge badge-danger'>01.03.2026 1:00:05 am</span>
+<span class='badge badge-default'>00:00:06:497</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -158,14 +158,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>8:28:11 pm</td>
+        <td>1:00:05 am</td>
         <td>
           Test case skipped
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>8:28:11 pm</td>
+        <td>1:00:05 am</td>
         <td>
           <textarea readonly class="code-block">java.lang.RuntimeException: Failed to click the element::By.id: 
 	at java_programs.practice.CommonHelper.clickOnElement(CommonHelper.java:45)
@@ -201,9 +201,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.14.1', revision: '03f8ede370'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '26.1', java.version: '21.0.8'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [ba9d9941e2c65c16b137b1176328410b, findElement {using=id, value=}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50592}, goog:processID: 94251, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:50592/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: ba9d9941e2c65c16b137b1176328410b
+Command: [b0118045c927fef20d6c99ea6645d33f, findElement {using=id, value=}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53521}, goog:processID: 98294, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:53521/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: b0118045c927fef20d6c99ea6645d33f
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -241,7 +241,7 @@ Session ID: ba9d9941e2c65c16b137b1176328410b
           <div class="test-detail">
             <p class="name">webTableValidation</p>
             <p class="text-sm">
-              <span>8:28:12 pm</span> / <span>00:00:08:212</span>
+              <span>1:00:07 am</span> / <span>00:00:08:069</span>
               <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
@@ -250,9 +250,9 @@ Session ID: ba9d9941e2c65c16b137b1176328410b
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-skip">webTableValidation</h5>
-<span class='badge badge-success'>01.02.2026 8:28:12 pm</span>
-<span class='badge badge-danger'>01.02.2026 8:28:20 pm</span>
-<span class='badge badge-default'>00:00:08:212</span>
+<span class='badge badge-success'>01.03.2026 1:00:07 am</span>
+<span class='badge badge-danger'>01.03.2026 1:00:15 am</span>
+<span class='badge badge-default'>00:00:08:069</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -264,14 +264,14 @@ Session ID: ba9d9941e2c65c16b137b1176328410b
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>8:28:20 pm</td>
+        <td>1:00:15 am</td>
         <td>
           Test case skipped
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>8:28:20 pm</td>
+        <td>1:00:15 am</td>
         <td>
           <textarea readonly class="code-block">java.lang.RuntimeException: Failed to click the element::By.id: 
 	at java_programs.practice.CommonHelper.clickOnElement(CommonHelper.java:45)
@@ -307,9 +307,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.14.1', revision: '03f8ede370'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '26.1', java.version: '21.0.8'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [5d25d4839206c8a07b6e9b73d3ef6881, findElement {using=id, value=}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50628}, goog:processID: 94269, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:50628/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 5d25d4839206c8a07b6e9b73d3ef6881
+Command: [cd85bd4bb39e9ff32ff5ff970a8b4d03, findElement {using=id, value=}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53560}, goog:processID: 98307, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:53560/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: cd85bd4bb39e9ff32ff5ff970a8b4d03
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -347,7 +347,7 @@ Session ID: 5d25d4839206c8a07b6e9b73d3ef6881
           <div class="test-detail">
             <p class="name">webTableValidation</p>
             <p class="text-sm">
-              <span>8:28:21 pm</span> / <span>00:00:07:974</span>
+              <span>1:00:16 am</span> / <span>00:00:08:808</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -356,9 +356,9 @@ Session ID: 5d25d4839206c8a07b6e9b73d3ef6881
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">webTableValidation</h5>
-<span class='badge badge-success'>01.02.2026 8:28:21 pm</span>
-<span class='badge badge-danger'>01.02.2026 8:28:29 pm</span>
-<span class='badge badge-default'>00:00:07:974</span>
+<span class='badge badge-success'>01.03.2026 1:00:16 am</span>
+<span class='badge badge-danger'>01.03.2026 1:00:24 am</span>
+<span class='badge badge-default'>00:00:08:808</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -370,14 +370,14 @@ Session ID: 5d25d4839206c8a07b6e9b73d3ef6881
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:28:29 pm</td>
+        <td>1:00:24 am</td>
         <td>
           Test case failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>8:28:29 pm</td>
+        <td>1:00:24 am</td>
         <td>
           <textarea readonly class="code-block">java.lang.RuntimeException: Failed to click the element::By.id: 
 	at java_programs.practice.CommonHelper.clickOnElement(CommonHelper.java:45)
@@ -413,9 +413,9 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.14.1', revision: '03f8ede370'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '26.1', java.version: '21.0.8'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [16ad268c6a798aefd9159d7b1d4fb644, findElement {using=id, value=}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50667}, goog:processID: 94284, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:50667/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 16ad268c6a798aefd9159d7b1d4fb644
+Command: [0d1de051bf40fe0c6bc2453a037e6d2d, findElement {using=id, value=}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 143.0.7499.170, chrome: {chromedriverVersion: 143.0.7499.169 (164b20aab62..., userDataDir: /var/folders/4q/z0hfyyk910z...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:53597}, goog:processID: 98321, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: mac, proxy: Proxy(), se:cdp: ws://localhost:53597/devtoo..., se:cdpVersion: 143.0.7499.170, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 0d1de051bf40fe0c6bc2453a037e6d2d
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
@@ -489,21 +489,21 @@ Session ID: 16ad268c6a798aefd9159d7b1d4fb644
 <tbody>
 <tr class="tag-test-status" status="skip">
 <td><span class="badge log skip-bg">Skip</span></td>
-<td>20:28:03 pm</td>
+<td>00:59:59 am</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>webTableValidation</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="skip">
 <td><span class="badge log skip-bg">Skip</span></td>
-<td>20:28:12 pm</td>
+<td>01:00:07 am</td>
 <td>
 <a href="#" class="linked" test-id='3' id='3'>webTableValidation</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>20:28:21 pm</td>
+<td>01:00:16 am</td>
 <td>
 <a href="#" class="linked" test-id='4' id='4'>webTableValidation</a>
 </td>
@@ -525,13 +525,13 @@ Session ID: 16ad268c6a798aefd9159d7b1d4fb644
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 2, 2026 08:27:50 pm</h3>
+<h3>Jan 3, 2026 12:59:46 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 2, 2026 08:28:29 pm</h3>
+<h3>Jan 3, 2026 01:00:25 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -601,7 +601,7 @@ Session ID: 16ad268c6a798aefd9159d7b1d4fb644
 </div></div>
 <script>
 var timeline = {
-"marketPlace":10.06,"webTableValidation":8.269,"webTableValidation":8.212,"webTableValidation":7.974
+"marketPlace":10.703,"webTableValidation":6.497,"webTableValidation":8.069,"webTableValidation":8.808
 };
 </script>
 <div class="row">
